# adventofcode2024

./: .gitignore  Cargo.toml
input/: day06.txt:Zone.Identifier
src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
src/utils/: utils.rs
utils/: input.py
