[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/utils/utils.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
indicatif = "0.17.9"
itertools = "0.13.0"
ndarray = "0.16.1"
nom = "7.1.3"
petgraph = { version = "0.6.5", features = ["all"] }
